fix: now socials icons are visible

--- a/app/components/Socials/Socials.css
+++ b/app/components/Socials/Socials.css
@@ -5,3 +5,15 @@
     gap: 2em;
     margin: 2em 0;
 }
+
+.socials li a svg {
+    fill: var(--black);
+    height: 32px;
+    width: 32px;
+}
+
+@media screen and (max-width: 1000px) {
+    .socials {
+        justify-content: center;
+    }
+}
